set template row to prevent 100% height of cards causing an issue on safari

--- a/src/component-library/site-components/CardGrid/CardGrid.module.scss
+++ b/src/component-library/site-components/CardGrid/CardGrid.module.scss
@@ -3,6 +3,7 @@
 
 .wrapper {
   @include responsive-grid;
+  grid-template-rows: min-content;
 
   > div {
     img {
